--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,10 @@
 == README
 
-!https://coveralls.io/repos/mdeift/blog/badge.png?branch=master(Coverage Status)!:https://coveralls.io/r/mdeift/blog?branch=master
+[GV img]: https://badge.fury.io/rb/blog.png
+[BS img]: https://travis-ci.org/mdeift/blog.png
+[DS img]: https://gemnasium.com/mdeift/blog.png
+[CC img]: https://codeclimate.com/github/mdeift/blog.png
+[CS img]: https://coveralls.io/repos/mdeift/blog/badge.png?branch=master
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
